extracted_vulnerabilities/pair_196691_242637/fixed_report.txt
extracted_vulnerabilities/pair_196691_242637/isoffin_read_fixed.c:123:87: error: There is an unknown macro here somewhere. Configuration is required. If LLU is a macro then please configure it. [unknownMacro]
    GF_LOG(GF_LOG_DEBUG, GF_LOG_DASH, ("[IsoMedia] Refreshing current segment at UTC "LLU" - "LLU" bytes still missing - input is EOS %d\n", gf_net_get_utc(), bytesMissing, in_is_eos));
                                                                                      ^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

